# sonda

./: .dockerignore  .editorconfig  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  Taskfile.yml  docker-compose.yml  index.html  install.sh  release-please-config.json  sitemap.xml
sonda/: CLAUDE.md  Cargo.toml
sonda-core/: CLAUDE.md  Cargo.toml  LICENSE-APACHE
sonda-core/benches/: scheduler_baseline.rs  while_steady_state.rs
sonda-core/packs/: telegraf-snmp-interface.yaml
sonda-core/scenarios/: cardinality-explosion.yaml  cpu-spike.yaml  disk-fill.yaml  error-rate-spike.yaml  histogram-latency.yaml  interface-flap.yaml  latency-degradation.yaml  log-storm.yaml  memory-leak.yaml  network-link-failure.yaml  steady-state.yaml
sonda-core/src/: catalog.rs  compile.rs  emit.rs  lib.rs  util.rs
sonda-core/src/analysis/: mod.rs  pattern.rs
sonda-core/src/compiler/: compile_after.rs  env_interpolate.rs  expand.rs  mod.rs  normalize.rs  parse.rs  prepare.rs  timing.rs
sonda-core/src/config/: aliases.rs  mod.rs  snapshot.rs  validate.rs
sonda-core/src/encoder/: influx.rs  json.rs  mod.rs  otlp.rs  prometheus.rs  remote_write.rs  syslog.rs
sonda-core/src/generator/: constant.rs  csv_header.rs  csv_replay.rs  histogram.rs  jitter.rs  log_csv_replay.rs  log_replay.rs  log_template.rs  mod.rs  sawtooth.rs  sequence.rs  sine.rs  spike.rs  step.rs  summary.rs  uniform.rs
sonda-core/src/model/: log.rs  metric.rs  mod.rs
sonda-core/src/packs/: mod.rs
sonda-core/src/scenarios/: mod.rs
sonda-core/src/schedule/: core_loop.rs  gate_bus.rs  handle.rs  histogram_runner.rs  launch.rs  log_runner.rs  mod.rs  multi_runner.rs  runner.rs  stats.rs  summary_runner.rs
sonda-core/src/sink/: channel.rs  file.rs  http.rs  kafka.rs  loki.rs  memory.rs  mod.rs  otlp_grpc.rs  remote_write.rs  retry.rs  stdout.rs  tcp.rs  udp.rs
sonda-core/src/v2/: mod.rs  parse.rs
sonda-core/tests/: ci_workflow_test.rs  compile_after_fixtures.rs  compile_snapshot.rs  csv_replay_roundtrip.rs  encoder_sink_matrix.rs  env_interpolation.rs  expand_fixtures.rs  fixture_examples.rs  gate_bus_stress.rs  log_csv_replay_roundtrip.rs  pack_parity.rs  sink_error_policy.rs  start_time_shift.rs  translator_semantics.rs  v2_compile_after_fixtures.rs  v2_expand_fixtures.rs  v2_fixture_examples.rs  v2_pack_parity.rs  v2_pack_runtime_parity.rs  v2_runtime_parity.rs  v2_story_parity.rs  v2_translator_semantics.rs  while_close_stale_marker.rs  while_close_workshop_repro.rs  while_local_upstream_finishes.rs  while_runtime.rs
sonda-core/tests/common/: mod.rs
sonda-core/tests/fixtures/: test-ca.pem
sonda-core/tests/snapshots/: compile_after_fixtures__valid_compile_cross_signal_type.snap  compile_after_fixtures__valid_compile_pack_dotted_ref.snap  compile_after_fixtures__valid_compile_phase_offset_and_delay.snap  compile_after_fixtures__valid_compile_sequence_target.snap  compile_after_fixtures__valid_compile_step_target.snap  compile_after_fixtures__valid_compile_transitive_chain.snap  compile_snapshot__snapshot_histogram_basic.snap  compile_snapshot__snapshot_histogram_basic_prepared.snap  compile_snapshot__snapshot_multi_scenario.snap  compile_snapshot__snapshot_multi_scenario_prepared.snap  compile_snapshot__snapshot_single_log_template.snap  compile_snapshot__snapshot_single_log_template_prepared.snap  compile_snapshot__snapshot_single_metric_constant.snap  compile_snapshot__snapshot_single_metric_constant_prepared.snap  compile_snapshot__snapshot_single_metric_sine.snap  compile_snapshot__snapshot_single_metric_sine_prepared.snap  compile_snapshot__snapshot_summary_basic.snap  compile_snapshot__snapshot_summary_basic_prepared.snap  expand_fixtures__valid_expand_anonymous_pack.snap  expand_fixtures__valid_expand_multiple_packs.snap  expand_fixtures__valid_expand_pack_with_overrides.snap  fixture_examples__valid_defaults_label_merge_normalizes.snap  fixture_examples__valid_defaults_logs_default_encoder_normalizes.snap  fixture_examples__valid_defaults_pack_entry_normalizes.snap  v2_compile_after_fixtures__valid_compile_cross_signal_type.snap  v2_compile_after_fixtures__valid_compile_pack_dotted_ref.snap  v2_compile_after_fixtures__valid_compile_phase_offset_and_delay.snap  v2_compile_after_fixtures__valid_compile_sequence_target.snap  v2_compile_after_fixtures__valid_compile_simple_chain.snap  v2_compile_after_fixtures__valid_compile_step_target.snap  v2_compile_after_fixtures__valid_compile_transitive_chain.snap  v2_expand_fixtures__valid_expand_anonymous_pack.snap  v2_expand_fixtures__valid_expand_multiple_packs.snap  v2_expand_fixtures__valid_expand_pack_file_path.snap  v2_expand_fixtures__valid_expand_pack_with_overrides.snap  v2_fixture_examples__valid_defaults_label_merge_normalizes.snap  v2_fixture_examples__valid_defaults_logs_default_encoder_normalizes.snap  v2_fixture_examples__valid_defaults_pack_entry_normalizes.snap
sonda-parsers/: Cargo.toml
sonda-parsers/src/: lib.rs
sonda-parsers/src/canonical/: log_csv.rs  mod.rs
sonda-parsers/src/rawlog/: mod.rs
sonda-parsers/tests/: rawlog_integration.rs
sonda-server/: CLAUDE.md  Cargo.toml  build.rs
sonda-server/src/: auth.rs  gate_registry.rs  main.rs  packs.rs  state.rs
sonda-server/src/middleware/: metrics.rs  mod.rs
sonda-server/src/routes/: events.rs  (+6 more)
sonda-server/tests/: auth.rs  bounded_scheduler.rs  build_info.rs  cross_post_e2e.rs  events.rs  health.rs  integration.rs  metrics.rs  scenarios.rs
sonda/src/: catalog.rs  catalog_dir.rs  cli.rs  config.rs  dry_run.rs  main.rs  packs.rs  parsers.rs  progress.rs  scenario_loader.rs  scenarios.rs  sink_format.rs  status.rs  yaml_helpers.rs
sonda/tests/: cli_catalog.rs  cli_list_show.rs  cli_new.rs  cli_run.rs  cli_run_dispatch.rs  cli_while_runtime.rs  csv_import.rs  dry_run_format.rs  dry_run_verbose_flags.rs  dry_run_while_snapshots.rs  example_scenarios.rs  example_smoke.rs  init_v2_output.rs  json_output.rs  log_scenarios.rs  pack_yaml_validation.rs  parsers_cli.rs  quiet_flag.rs  scenario_yaml_validation.rs
(+505 files in other folders)
