[workspace]
members = ["sonda-core", "sonda", "sonda-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["David Flores <davidflores77@gmail.com>"]
license = "MIT"
repository = "https://github.com/davidflores77/sonda"
description = "Synthetic telemetry generator for testing observability pipelines"

[workspace.dependencies]
sonda-core = { path = "sonda-core" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
