[workspace]
members = ["sonda-core", "sonda", "sonda-server"]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
rust-version = "1.75"
authors = ["David Flores <davidflores77@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/davidban77/sonda"
homepage = "https://github.com/davidban77/sonda"
description = "Synthetic telemetry generator for testing observability pipelines"
keywords = ["telemetry", "metrics", "observability", "testing", "synthetic"]
categories = ["command-line-utilities", "development-tools::testing"]

[workspace.dependencies]
sonda-core = { path = "sonda-core", version = "0.8.0" }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", default-features = false, features = ["tls"] }
