[package]
name = "sonda-core"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools::testing"]
description = "Core engine for Sonda — synthetic telemetry generation library"
readme = "../README.md"

[features]
kafka = ["dep:rskafka", "dep:tokio", "dep:chrono"]
remote-write = ["dep:prost", "dep:snap"]

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true }
rskafka = { version = "0.6.0", default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "macros"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
prost = { version = "0.13", optional = true }
snap = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
