[package]
name = "sonda-core"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools::testing"]
description = "Core engine for Sonda — synthetic telemetry generation library"
readme = "../README.md"

[features]
default = ["config"]
config = ["dep:serde_yaml_ng"]
http = ["dep:ureq"]
kafka = ["dep:rskafka", "dep:tokio", "dep:chrono"]
remote-write = ["dep:prost", "dep:snap", "dep:ureq"]

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true, optional = true }
rskafka = { version = "0.6.0", default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "macros"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
prost = { version = "0.14", optional = true }
snap = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
