[package]
name = "sonda-core"
version = "0.15.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools::testing"]
description = "Core engine for Sonda — synthetic telemetry generation library"
readme = "../README.md"

[features]
default = ["config"]
config = ["dep:serde_yaml_ng"]
http = ["dep:ureq"]
kafka = ["dep:rskafka", "dep:tokio", "dep:chrono", "dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
remote-write = ["dep:prost", "dep:snap", "dep:ureq"]
otlp = ["dep:tonic", "dep:prost", "dep:tokio", "dep:bytes", "dep:http"]

[dependencies]
serde = { workspace = true }
serde_yaml_ng = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ureq = { workspace = true, optional = true }
rskafka = { version = "0.6.0", default-features = false, features = ["transport-tls"], optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "macros"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "1", optional = true }
prost = { version = "0.14", optional = true }
snap = { version = "1", optional = true }
tonic = { version = "0.14", default-features = false, features = ["transport", "channel", "tls-ring"], optional = true }
bytes = { version = "1", optional = true }
http = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
insta = { workspace = true, features = ["filters"] }
rstest = { workspace = true }
