[package]
name = "sonda-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["web-programming::http-server", "development-tools::testing"]
description = "HTTP control plane for Sonda — synthetic telemetry generator"
readme = "../README.md"

[[bin]]
name = "sonda-server"
path = "src/main.rs"

[dependencies]
sonda-core = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
libc = "0.2"
