[package]
name = "sonda"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
description = "CLI for Sonda — synthetic telemetry generator for testing observability pipelines"
readme = "../README.md"

[[bin]]
name = "sonda"
path = "src/main.rs"

[dependencies]
sonda-core = { workspace = true, features = ["kafka"] }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
