[package]
name = "sonda"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
description = "CLI for Sonda — synthetic telemetry generator for testing observability pipelines"
readme = "../README.md"

[features]
remote-write = ["sonda-core/remote-write"]
kafka = ["sonda-core/kafka"]

[[bin]]
name = "sonda"
path = "src/main.rs"

[dependencies]
sonda-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
