[package]
name = "sonda"
version = "0.11.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
description = "CLI for Sonda — synthetic telemetry generator for testing observability pipelines"
readme = "../README.md"

[features]
default = ["config", "http"]
config = ["sonda-core/config"]
http = ["sonda-core/http"]
remote-write = ["sonda-core/remote-write"]
kafka = ["sonda-core/kafka"]
otlp = ["sonda-core/otlp"]

[[bin]]
name = "sonda"
path = "src/main.rs"

[dependencies]
sonda-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
ctrlc = "3"
owo-colors = { version = "4", features = ["supports-colors"] }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
